Related: fdo#54024 decrazy the Dialog Type for a start anyway

once set in the dialog ctors the dialog type never changes
so we don't need to pass it by pointer

Change-Id: I9d4baf2d93ca4c09e413a8fd3cd3e3367873e833